stylesheets/styles.css
/*CSS Styles should move from general to more specific
*Breaking css into sections using comments can assist in readability
==============================================================================*/

/* Color Palette
=====================================*/
/*
#000009 - 
#fcf7f7 -
#1d0049 -
#defff2 -

#666CCC -
#440094 -

#E55126 -
#E5A227 -
#0C73B8 -
*/




/*Global Styles
===============================*/
html {
    box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

a {
    color: #fcf7f7;
}

main p, main li {
    color: #fcf7f7;
}

main h2, main h3 {
    color: #1d0049;
}


/* Header and Footer
===============================*/
#logo {
  display: inline-block;
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  float: left;
}

.header {
  font-family: 'Times New Roman', cursive, serif;
  font-size: 24px;
  margin-top: 25px;
  margin-left: 10px;
  color: #fcf7f7;
/*   flame color:   #e63223*/
  display: inline-block;
  float: left;
}

footer {
    background: #fcf7f7;
    width: 100%;
    min-height: 75px;
    overflow: auto;
    display: grid;
    grid-template-columns: 30% 30% x;
    grid-template-rows: 30% 30% x;
    font-size: 12px;
}

footer h2 {
    color: #1d0049;
    font-size: 30px;
    font-weight: bold;
    margin-top: 0px;
    margin-bottom: 10px;
    padding: 0.5em;
}

footer a {
    margin-left: 5px;
    margin-right: 5px;
    padding: 2em;
    min-width: 1vw; 
}

footer p {
    color: #1d0049;
    font-size: 18px;
    padding: 0px 5px 10px 15px;
}

footer img {
    margin-left: 20px;
}

#footer-grid {
    display: grid;
    max-width: 300px;
    grid-template: 1fr 1fr / 1fr 1fr;
}

#copy {
    margin-top: 20px;
    padding: 1.1em;
    font-size: 14px;
}



/* Navigation Bar
===============================*/
.nav-bar {
  width: 100%;
  height: 110px;
  background-color: #111214;
  color:#fcf7f7;
  margin: 0px;
}

nav li {
    min-width: 95px;
    display: inline-grid;
    float: right;
    grid-template-columns: 10% 10% x;
    margin-top: 25px;
}

.nav-bar a {
    padding: 20px;
    text-decoration: none;
    font-family: Arial, sans-serif;
}

nav a:hover, li a:hover {
   color: #950000;
   font-weight: bold;
    text-decoration: underline;
}



/* Primary Content
===============================*/
main {
  font-family: Helvetica;
  padding: 2em;
  background: #950000;
  /*#BC1324*/
  background-size: contain;
  width: 100%;
  padding: 2em;
  min-height: 800px;
}

.whole-body {
     min-width: 250px;
     display: grid;
/*    float: right;*/
     grid-template-columns: 25% 75%;    
}

#aboutUs {
    text-align: center;
    font-size: 30px;
    font-weight: bold;
}


.intro-text {
  color: azure;
  width: 100%;
  padding: 20px;
  text-align: left;
  line-height: 22px;
}

.post-text {
    margin: auto;
    width: 100%;
    text-align: center;
}

.post-text strong {
    text-align: center;
    font-size: 30px;
}

#firstPost {
  border-color: #000009;
  border-width: 10px;
  border-style: solid;
  margin: auto;
  border-radius: 5%;
}

.cal-text {
    text-align: center;
    font-size: 25px;
    padding: 20px;
    width: 100%;
}

#cal {
    width: 50%;
    margin: auto;
}

